# thetacrypt

./: .dockerignore  .gitignore  .gitlab-ci.yml  Backlog_tofix.md  Dockerfile  LICENSE.txt  Makefile  abci.Dockerfile  config.env  config.md  docker-compose.yml  protcols_design.md  readMe.md  readme.md
demo/abci_app/: Cargo.toml
demo/abci_app/src/: fair_order_app.rs
demo/abci_app/src/fair_order_app/: main.rs
src/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  log4rs.yaml  log4rs_to_file.yaml  msg_encrypted  readme.md  run_local.sh  setup.sh  start_network.sh
src/abci_app/: Cargo.toml
src/abci_app/src/: fair_order_app.rs  lib.rs
src/abci_app/src/fair_order_app/: main.rs
src/conf/: bz03-bls12381.pub  cks05-bls12381.pub  client.json  frost-ed25519.pub  keys_0.json  keys_1.json  keys_2.json  keys_3.json  out.txt  server_0.json  server_1.json  server_2.json  server_3.json  sg02-bls12381.pub
src/core/: readme.md
src/core/orchestration/: Cargo.toml  readme.md
src/core/orchestration/src/: interface.rs  keychain.rs  lib.rs  message_dispatcher.rs  state_manager.rs  types.rs
src/core/orchestration/tests/: test-keychain.rs  test-rpc-client-decrypt.rs
src/core/protocols/: .rustc_info.json  Cargo.toml  readme.md
src/core/protocols/src/: interface.rs  lib.rs
src/core/schemes/: Cargo.toml  readme.md
src/core/schemes/derive/: Cargo.toml
src/core/schemes/mcore/: Cargo.toml
src/core/schemes/src/: group.rs  group_generators.rs  group_tests.rs  interface.rs  keys.rs  lib.rs  rand.rs  readme.md  scheme_types_impl.rs  util.rs
src/derive/: Cargo.toml
src/derive/src/: lib.rs
src/events/: Cargo.toml
src/events/src/: event.rs
src/mcore/src/bls12381/: big.rs  dbig.rs  ecp2.rs  fp.rs  hpke.rs
src/mcore/src/bn254/: big.rs  dbig.rs  ecdh.rs  ecp.rs  fp.rs  pair.rs
src/mcore/src/ed25519/: ecp.rs  fp.rs  hpke.rs
src/mcore/src/rsa2048/: big.rs
src/mcore/src/rsa3072/: dbig.rs
src/mcore/src/rsa4096/: big.rs  dbig.rs  ff.rs  rsa.rs
src/mcore/src/secp256k1/: big.rs  dbig.rs  ecdh.rs  hpke.rs
src/network/: Cargo.toml  floodsub_demo.sh  readme.md
src/network/src/: bla.rs  interface.rs  lib.rs  main.rs  readme.md
src/network/src/channel/: channel.rs
src/network/src/config/: config.toml  config_service.rs  deserialize.rs  mod.rs
src/network/src/deliver/: deliver.rs
src/network/src/network_info/: address_converter.rs  deserialize.rs  mod.rs  rpc_net_info.rs  rpc_status.rs
src/network/src/network_manager/: mod.rs  network_director.rs  network_manager.rs  network_manager_builder.rs
src/network/src/p2p/: config.toml  mod.rs  p2p_component.rs  p2p_component_tests.rs
src/network/src/proxy/: mod.rs  proxy.rs  proxyp2p.rs
src/network/src/send/: send.rs
src/network/src/setup/: floodsub_setup.rs  floodsub_tokio_setup.rs  gossipsub_setup.rs  gossipsub_tokio_setup.rs  mod.rs  setup.rs  swarm_behaviour.rs
src/network/src/types/: config.rs  message.rs  mod.rs  readme.md
src/network_test/: Cargo.toml
src/network_test/src/: bla.rs
src/network_test/src/deliver/: deliver.rs  mod.rs
src/network_test/src/send/: get_addresses.rs  send.rs
src/proto/: Cargo.toml  build.rs
src/proto/src/: lib.rs  protocol_types.proto  protocol_types.rs  proxy_api.proto  scheme_types.proto  scheme_types.rs
src/protocols/: Cargo.toml  build.rs  keys_0.json  keys_1.json  keys_2.json  keys_3.json  readme.md  run_example.sh  run_static_net_example.sh  run_tendermint_net_example.sh
src/protocols/conf/: keys_0.json  keys_1.json  keys_2.json  keys_3.json  keys_4.json  pk.json  server_3.json
src/protocols/proto/: requests.proto
src/protocols/src/: confgen.rs  keychain.rs  keychain_tests.rs  lib.rs  message_dispatcher.rs  message_forwarder.rs  protocol.rs  rpc_network.rs  rpc_request_handler.rs  server.rs  state_manager.rs  threshold_cipher_protocol.bak  threshold_cipher_protocol.rs  threshold_coin_protocol.rs  threshold_signature_protocol.rs  types.rs
src/protocols/src/confgen/: cli.rs
src/protocols/src/pb/: requests.rs
src/protocols/src/proto/: mod.rs  protocol_types.proto  protocol_types.rs
src/protocols/src/server/: cli.rs  config.rs  dirutil.rs  mod.rs  types.rs
src/protocols/src/threshold_cipher/: message_types.rs  protocol.rs
src/protocols/src/threshold_coin/: protocol.rs
src/protocols/src/threshold_signature/: protocol.rs
src/protocols/tests/: test-keychain.rs  test-rpc-client-decrypt.rs  test_keychain_ser.txt
src/schemes/: Cargo.toml  readme.md
src/schemes/derive/: readme.md
src/schemes/derive/src/: lib.rs
src/schemes/src/: group.rs  group_ex.rs  group_tests.rs  interface.rs  keys.rs  lib.rs  scheme_types_impl.rs
src/schemes/src/dl_schemes/: bigint.rs  bigint_tests.rs  common.rs  common_tests.rs
src/schemes/src/examples/: main.rs
src/schemes/src/proto/: mod.rs
src/schemes/src/rsa_schemes/: bigint.rs  bigint_tests.rs  keygen.rs
src/service/: Cargo.toml  readme.md
src/service/src/: event.rs  lib.rs  rpc_network.rs  rpc_request_handler.rs
src/src/: bigint.rs  bz03.rs  group.rs  interface.rs  keygen.rs  keys.rs  lib.rs  main.rs  rand.rs  readme.md  sg02.rs  shares.rs  threshold.rs  util.rs
src/src/dl_schemes/: bigint.rs  bz03.rs  common.rs  common_tests.rs  keygen.rs  keygen_tests.rs  mod.rs  pkcs8.rs  sg02.rs
src/src/dl_schemes/ciphers/: bz03.rs  bz03_tests.rs  mod.rs  sg02.rs  sg02_tests.rs
src/src/dl_schemes/coins/: cks05.rs  cks05_tests.rs  mod.rs
src/src/dl_schemes/dl_groups/: bls12381.rs  bls12381_tests.rs  bn254.rs  dl_group.rs  ed25519.rs  mod.rs  pairing.rs
src/src/dl_schemes/signatures/: bls04.rs  bls04_tests.rs  frost.rs  frost_tests.rs  mod.rs
src/src/examples/: main.rs
src/src/proto/: scheme_types.proto  scheme_types.rs
src/src/rsa_schemes/: bigint.rs  bigint_tests.rs  common.rs  keygen.rs  mod.rs  rsa_mod.rs
src/src/rsa_schemes/rsa_groups/: mod.rs  rsa2048.rs  rsa_domain.rs
src/src/rsa_schemes/signatures/: mod.rs  (+2 more)
src/thetacrypt_blockchain_stub/: Cargo.toml  build.rs  readme.md
src/thetacrypt_blockchain_stub/src/: lib.rs  main.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
(+348 files in other folders)
