[workspace]
members = [
    "network",
    "service",
    "core/schemes",
    "core/protocols",
    "core/orchestration",
    "utils",
    "thetacrypt_blockchain_stub",
    "events",
    ]

[package]
name = "thetacrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {path = "utils", version = "0.1.0"}
theta_schemes = {path = "core/schemes", version = "0.1.0"}
theta_orchestration = {path = "core/orchestration", version = "0.1.0"}
theta_protocols = {path = "core/protocols", version = "0.1.0"}
theta_proto = {path = "proto", version = "0.1.0"}
theta_service = {path = "service", version = "0.1.0"}
theta_network = {path = "network", version = "0.1.0"}
terminal-menu = "2.0.6"
thetacrypt_blockchain_stub = {path = "thetacrypt_blockchain_stub", version = "0.1.0"}
theta_events = {path = "events", version = "0.1.0"}
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0", features = ["derive", "std"] }

rand = "0.8.5"
hex = "0.4.3"
log = "0.4.17"
log4rs = "1.1.1"
env_logger = "0.9.1"
clap = { version = "4.0.14", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
base64 = "0.21.5"
atty = "0.2.14"
sha2 = "0.10.8"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "confgen"
path = "bin/confgen.rs"

[[bin]]
name = "thetacli"
path = "bin/thetacli.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "key_example"
path = "bin/key_example.rs"
