[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mdns = ["libp2p-mdns"]
tcp-tokio = ["libp2p-tcp", "libp2p-tcp/tokio"]

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
cosmos_crypto = {path = "../", version = "0.1.0"}
env_logger = "0.9.0"
futures = "0.3.21" # for our async / await blocks
libp2p = { version = "0.45.0", features = ["tcp-tokio", "mdns"]}
libp2p-mdns = { version = "0.37.0", optional = true }
libp2p-tcp = { version = "0.33.0", optional = true }
# libp2p-gossipsub = { version = "0.37.0" }
# libp2p-core = "0.32.1"
log = { version = "0.4.16" }
once_cell = "1.5"
prost = "0.10.4"
protobuf = "3.0.3"
reqwest = { version = "0.11.10", features = ["json"] } # reqwest with JSON parsing support
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
tokio-stream = { version = "0.1" }
time = {version = "0.3.9"}
tonic = "0.7"
tendermint = "0.23.7"
tendermint-rpc = { version = "0.23.7", features = ["http-client"] }

[build-dependencies]
prost-build = "0.10.4"
tonic-build = "0.7"