[package]
name = "protocols"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmos_crypto = {path = "../", version = "0.1.0"}
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mcore = {path="../mcore", version="0.1.0", features=["std"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
hex = "0.4.3"
futures = "0.3.21"
network = {path="../network"}
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11.10", features = ["json"] } # reqwest with JSON parsing support
serde_bytes = "0.11"
base64 = "0.13.0"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11.1"

# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]] 
# name = "client"
# path = "src/client.rs"
