[package]
name = "protocols"
version = "0.1.0"
edition = "2018"

[dependencies]
schemes = {path = "../schemes", version = "0.1.0"}
thetacrypt_proto = {path = "../proto", version = "0.1.0"}
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mcore = {path="../schemes/mcore", version="0.1.0", features=["std"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
hex = "0.4.3"
log = "0.4.17"
env_logger = "0.9.1"
futures = "0.3.21"
network = {path="../network"}
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11.10", features = ["json"] } # reqwest with JSON parsing support
serde_bytes = "0.11"
base64 = "0.13.0"
urlencoding = "2.1.2"
text_io = "0.1.12"
clap = { version = "4.0.14", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11.1"
