[package]
name = "theta_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theta_schemes = {path = "../core/schemes", version = "0.1.0"}
theta_protocols = {path = "../core/protocols", version = "0.1.0"}
theta_orchestration = {path = "../core/orchestration", version = "0.1.0"}
theta_proto = {path = "../proto", version = "0.1.0"}
theta_network = {path="../network"}
theta_events = {path="../events", version = "0.1.0"}

chrono = { version = "0.4.31", features = ["serde"] }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mcore = {path="../core/schemes/mcore", version="0.1.0", features=["std"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
hex = "0.4.3"
log = "0.4.17"
env_logger = "0.9.1"
futures = "0.3.21"

structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11.10", features = ["json"] } # reqwest with JSON parsing support
serde_bytes = "0.11"
base64 = "0.13.0"
urlencoding = "2.1.2"
text_io = "0.1.12"
clap = { version = "4.0.14", features = ["derive"] }

log4rs = "1.1.1"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11.1"

[lib]
name = "theta_service"
path = "src/lib.rs"
