[package]
name = "thetacrypt_blockchain_stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11.1"